			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Wrong calls to GC from sort/2 and findall/3. Can cause crashes
    as well as errornous results.

=================================
VERSION 5.6.44 (October 15, 2007)
=================================

  * ADDED: message_queue_property/2, replacing message_queue_size/2.
    ISO compatibility.

  * FIXED: debug interaction of setup_and_call_cleanup/4.  Michiel Hildebrand.

  * FIXED: Quoted write of 0 'infix op' X.  Tom Schrijvers.

  * ADDED: Make cross-referencer aware of :- encoding directive.

  * ADDED: message_queue_create/2 for ISO compatibility.  Paulo Moura.

  * FIXED: library(url): use %20 instead of + for encoding spaces.
    Christopher Sutton .

  * FIXED: BUF_MALLOC with REP_MB in PL_get_chars().  Causes a failure
    in exec/1.  Alexandre Vautier

Moved from CVS to GIT.

  * ADDED: thread_property/2 following the prosed threading standard.
    Moved current_thread/2 to the compatibility library.  Paulo Moura.

  * FIXED: 64-bit issue in subterm_positions option of read_term/3.

  * ADDED: Explicit DOS/POSIX newline handling.  Work in progress to
  simplify dealing with files on mixed Windows/Non-Windows environments.

  * ENHANCED: GMP foreign code interaction.  Roberto Bagnara.

  * MODIFIED: Deleted prolog flag version_numer and added version_data.

  * MODIFIED: Also do not allow integers in open/3.

=================================
VERSION 5.6.43 (October 01, 2007)
=================================

  * ADDED: requests_dialect/1 and many more for adding Prolog portability.
    See manual.

  * ADDING: :-if, :- else, :- endif for conditional compilation.  Intended
    to simplify exchanging code	with YAP.

  * ADDED: Prolog flags dialect (swi) and version_number (replaces